Fix T42797: -Werror=sign-conversion Triggered in blf_glyph.c

Very minor, but since it was reported...